--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ ext {
 }
 
 dependencies {
+	implementation("org.springframework.boot:spring-boot-starter-webflux")
+	implementation 'org.javers:javers-spring-boot-starter-mongo:6.8.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
