--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,11 @@ ext {
 }
 
 dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-webflux")
-	implementation 'org.javers:javers-spring-boot-starter-mongo:6.8.0'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -39,6 +37,13 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:kafka'
 	testImplementation 'org.testcontainers:mongodb'
+	compileOnly 'io.mongock:mongock-springboot:5.1.6'
+	implementation 'com.github.cloudyrock.mongock:mongock-spring-v5:4.3.8'
+	implementation 'com.github.cloudyrock.mongock:mongodb-springdata-v3-driver:4.3.8'
+
+
+
+
 }
 
 dependencyManagement {
