--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -15,9 +15,10 @@ services:
       SPRING_DATA_MONGODB_PORT: ${MONGO_PORT}
       SPRING_DATA_MONGODB_USERNAME: ${MONGO_USERNAME}
     ports:
-      - "8080:8080"
+      - "8081:8080"
     depends_on:
-      - mongo
+      mongo:
+        condition: service_started
     networks:
       - deploy-spring-boot-mongo
   mongo:
@@ -29,7 +30,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
     ports:
-      - "${MONGO_PORT}:27017"
+      - "27017"
     networks:
       - deploy-spring-boot-mongo
     volumes:
@@ -37,4 +38,3 @@ services:
       - ~/Projetos/Volumes/groceries-manager:/data/
 networks:
   deploy-spring-boot-mongo:
-    driver: bridge
