Some other things

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,6 +1,5 @@
-FROM openjdk:11
+FROM adoptopenjdk/openjdk11
 LABEL author="Sergio Luigi" email="sergio.luigialves@hotmail.com"
-COPY build/libs/*.jar /usr/src/groceries-manager.jar
-WORKDIR /usr/src/
+COPY build/libs/*.jar groceries-manager.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","groceries-manager.jar"]
+ENTRYPOINT ["java","-jar","/groceries-manager.jar"]
